--- a/C&T Web.html
+++ b/C&T Web.html
@@ -8,7 +8,7 @@
      </head>
 
     <body>
-        <div style="background-color:rgba(255, 206, 70, 0.856);">
+        <div style="background-color:gold;">
         <section class="header">
             <nav>
                 <a href="index.html"><img src="C:\Users\peter\OneDrive\Documents\Html Web\C&T Logo.jpg"></a>
